--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -1,6 +1,11 @@
 .header {
+    display: flex;
+    align-items: center;
     height: 48px;
     color: white;
     border-bottom: 1px solid rgb(36, 36, 36);
     border-color: rgb(36, 36, 36);
+    font-size: 28px;
+    font-weight: 500;
+    padding: 0 76px;
 }
