test: add button tests

--- a/src/components/Button/index.module.scss
+++ b/src/components/Button/index.module.scss
@@ -12,7 +12,7 @@
     border: 1px solid transparent;
 }
 
-.button-blue {
+.button-solid-blue {
     color: white;
     background-color: #0f6bdd;
 
